--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<div class="content">
 	  <div class="top-nav-div">
 	  	<ul>
-	  		<li><a href="#about"></a>Qui sommes-nous ?</li>
-	  		<li><a href="#offers"></a>Nos offres</li>
-	  		<li><a href="#contact"></a>Contact</li>
-	  		<li><a href="#contact"></a>Réserver une activité</li>
+	  		<li><a href="#about">Qui sommes-nous ?</a></li>
+	  		<li><a href="#offers">Nos offres</a></li>
+	  		<li><a href="#contact">Contact</a></li>
+	  		<li><a href="#contact">Réserver une activité</a></li>
 	  	</ul>
 	  </div>
 	  <div class="carousel-top">
