--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -5,10 +5,11 @@
   <title></title>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="content">
-	  <div class="top-nav-div">
+	  <div class="top-nav">
 	  	<ul>
 	  		<li><a href="#about">Qui sommes-nous ?</a></li>
 	  		<li><a href="#offers">Nos offres</a></li>
@@ -19,38 +20,87 @@
 	  <div class="carousel-top">
 	  	<div class="slide">
 	  		<div class="slide-son">
-	  			<h1>Lorem ipsum</h1>
-	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+	  			<h1>Pour les Entreprises</h1>
+	  			<p>Nos solutions sur-mesure pour simplifier le quotidien de vos salariés-parents : Journées parentalité, stages vacances,…</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
 	  		<div class="slide-son">
-	  			<h1>Lorem ipsum</h1>
-	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+	  			<h1>Pour les Centres Commerciaux</h1>
+	  			<p>Nos espaces enfants pour permettre à vos clients de shopper librement : animations permanentes ou évènementielles.</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
 	  		<div class="slide-son">
-	  			<h1>Lorem ipsum</h1>
-	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+	  			<h1>Pour les Collectivités</h1>
+	  			<p>Nos solutions d’accompagnement pour la gestion de vos activités péri et extrascolaires : recrutement, audit, coordination pédagogique,…</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
 	  		<div class="slide-son">
-	  			<h1>Lorem ipsum</h1>
-	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+	  			<h1>Pour les Écoles</h1>
+	  			<p>Nos ateliers ludo-éducatifs pour compléter votre offre périscolaire : Théâtre, Autour de l’alimentation, Les petits scientifiques,…</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
 	  		<div class="slide-son">
-	  			<h1>Lorem ipsum</h1>
-	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+	  			<h1>Pour les Parents</h1>
+	  			<p>Nos activités d’éveil et de loisirs pour vos enfants de 0 à 12 ans : Anniversaires, stages vacances, ateliers hebdomadaires (Initiation à l’anglais, au cirque, …</p>
 	  		</div>
+	  	</div>
+	  </div>
+	  <div class="top-info">
+	  	<div class="top-info-static">
+	  		<h1>Kids attitude, spécialiste des activités ludo-éducatives pour les enfants de 4 à 12 ans</h1>
+	  		<p>Kids Attitude est l'un des premiers gestionnaires d'espaces de loisirs pour les entreprises et centres commerciaux. Nous développons également des services d'accompagnement des collectivités et écoles dans leurs activités péri et extrascolaires.</p>
+	  	</div>
+	  	<div class="top-info-slider">
+	  		<div class="top-info-slide">
+	  			<img src="">
+	  			<ul>
+	  				<li></li>
+	  				<li></li>
+	  				<li></li>
+	  			</ul>
+	  		</div>
+	  		<div class="top-info-slide">
+	  			<img src="">
+	  			<ul>
+	  				<li></li>
+	  				<li></li>
+	  				<li></li>
+	  			</ul>
+	  		</div>
+	  		<div class="top-info-slide">
+	  			<img src="">
+	  			<ul>
+	  				<li></li>
+	  				<li></li>
+	  				<li></li>
+	  			</ul>
+	  		</div>
+	  		<div class="top-info-slide">
+	  			<img src="">
+	  			<ul>
+	  				<li></li>
+	  				<li></li>
+	  				<li></li>
+	  			</ul>
+	  		</div>
+	  		<div class="top-info-slide">
+	  			<img src="">
+	  			<ul>
+	  				<li></li>
+	  				<li></li>
+	  				<li></li>
+	  			</ul>
+	  		</div>
+	  	</div>
+	  </div>
+	  <div class="middle-info">
+	  	<div class="middle-info-slider">
+	  		<h1>Kids Attitude, vos solutions clé en main</h1>
+
 	  	</div>
 	  </div>
   </div>
