--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -8,22 +8,22 @@ body {
 	margin-right: auto;
 }
 
-.top-nav-div {
+.top-nav {
 	height: 83px;
 }
 
-.top-nav-div ul {
+.top-nav ul {
 	float: right;
 	display: flex;
 	flex-direction: row;
 	list-style: none;
 }
 
-.top-nav-div li {
+.top-nav li {
 	margin: 5px;
 }
 
-.top-nav-div a {
+.top-nav a {
 	color: black;
 	text-decoration: none;
 }
@@ -43,6 +43,9 @@ body {
     list-style: none;
     display: flex;
     flex-direction: row;
+    position: absolute;
+    top: 450px;
+    left: 538px;
 }
 
 .slick-dots li button {
@@ -64,3 +67,56 @@ body {
 	border: 2px solid black;
 }
 
+.slick-prev:after {
+	content: "<i class="fa fa-chevron-right" aria-hidden="true"></i>";
+}
+
+.slick-next: before {
+	content: "<i class="fa fa-chevron-left" aria-hidden="true"></i>";
+}
+
+.fa-chevron-right {
+	position: absolute;
+	right: 37px;
+	top: 255px;
+}
+
+.fa-chevron-right:hover, .fa-chevron-left:hover, .slick-dots li button {
+	cursor: pointer;
+}
+
+.fa-chevron-left {
+	position: absolute;
+	left: 37px;
+	top: 255px;
+	z-index: 1000;
+}
+
+.slick-dots .slick-active button {
+	background-color: grey;
+}
+
+.top-info-slider {
+	width: 860px;
+	height: 390px;
+	background-color: grey;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.top-info-slide {
+	visibility: hidden;
+	/*!!!!!!! A ABSOLUMENT SUPPRIMER QUAND JE FERAI CE SLIDER !!!!!! */
+}
+
+.middle-info {
+	height: 748px;
+	width: 870px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.middle-info-slide {
+	visibility: hidden;
+	/*!!!!!!! A ABSOLUMENT SUPPRIMER QUAND JE FERAI CE SLIDER !!!!!! */
+}
