more content added

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -54,7 +54,7 @@
 	  		<h1>Kids attitude, spécialiste des activités ludo-éducatives pour les enfants de 4 à 12 ans</h1>
 	  		<p>Kids Attitude est l'un des premiers gestionnaires d'espaces de loisirs pour les entreprises et centres commerciaux. Nous développons également des services d'accompagnement des collectivités et écoles dans leurs activités péri et extrascolaires.</p>
 	  	</div>
-	  	<div class="top-info-slider">
+	  	<div class="top-info-carousel">
 	  		<div class="top-info-slide">
 	  			<img src="">
 	  			<ul>
@@ -98,12 +98,89 @@
 	  	</div>
 	  </div>
 	  <div class="middle-info">
-	  	<div class="middle-info-slider">
-	  		<h1>Kids Attitude, vos solutions clé en main</h1>
-
+	  <h1>Kids Attitude, vos solutions clé en main</h1>
+	  <p>Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
+	  	<div class="middle-info-carousel">
+	  		<div class="middle-info-slide">
+	  			<div class="middle-info-left">
+	  				<h1></h1>
+	  				<p></p>
+	  				<ul>
+	  					<li></li>
+	  					<li></li>
+	  				</ul>
+	  			</div>
+	  			<img src="">
+	  		</div>
+	  		<div class="middle-info-slide">
+	  			<div class="middle-info-left">
+	  				<h1></h1>
+	  				<p></p>
+	  				<ul>
+	  					<li></li>
+	  					<li></li>
+	  				</ul>
+	  			</div>
+	  			<img src="">
+	  		</div>
+	  		<div class="middle-info-slide">
+	  			<div class="middle-info-left">
+	  				<h1></h1>
+	  				<p></p>
+	  				<ul>
+	  					<li></li>
+	  					<li></li>
+	  				</ul>
+	  			</div>
+	  			<img src="">
+	  		</div>
+	  		<div class="middle-info-slide">
+	  			<div class="middle-info-left">
+	  				<h1></h1>
+	  				<p></p>
+	  				<ul>
+	  					<li></li>
+	  					<li></li>
+	  				</ul>
+	  			</div>
+	  			<img src="">
+	  		</div>
+	  		<div class="middle-info-slide">
+	  			<div class="middle-info-left">
+	  				<h1></h1>
+	  				<p></p>
+	  				<ul>
+	  					<li></li>
+	  					<li></li>
+	  				</ul>
+	  			</div>
+	  			<img src="">
+	  		</div>
 	  	</div>
 	  </div>
+	  <div class="bottom-contact">
+	  	<div class="bottom-contact-left">
+	  		<h1>Contactez-nous</h1>
+	  		<p>Nos solutions sont conçues sur-mesure pour chacun de nos clients.</p>
+			<p>Vous souhaitez évoquer avec nous votre projet ? Partagez vos envies, nous vous recontacterons dans les meilleurs délais.</p>
+			<img src="">
+	  	</div>
+	  	<div class="bottom-contact-right">
+	  		<div class="write-us">
+	  			<i class="fa fa-pencil" aria-hidden="true"></i>Écrivez-nous
+	  		</div>
+	  	</div>
+	  </div>
+	  <div class="bottom-illustration">
+	  		
+	  </div>
+	  <div class="bottom-menu">
+	  	<p><a href="{{ path('mentions') }}">Mentions légales</a> | <a href="{{ path('credits') }}">Crédits</a></p>
+	  </div>
   </div>
+  <div class="bottom-line">
+	  	
+	  </div>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
