--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -10,40 +10,46 @@
 <body>
 	<div class="content">
 	  <div class="top-nav">
+	  	<div class="logo"><img src="assets/img/logo.png"></div>
 	  	<ul>
-	  		<li><a href="#about">Qui sommes-nous ?</a></li>
-	  		<li><a href="#offers">Nos offres</a></li>
-	  		<li><a href="#contact">Contact</a></li>
-	  		<li><a href="#contact">Réserver une activité</a></li>
+	  		<li class="main-menu"><a href="#about">Qui sommes-nous ?</a></li>
+	  		<li class="main-menu"><a href="#offers">Nos offres</a></li>
+	  		<li class="main-menu"><a href="#contact">Contact</a></li>
+	  		<li class="red-square"><a href="#contact">Réserver une activité</a></li>
 	  	</ul>
 	  </div>
 	  <div class="carousel-top">
 	  	<div class="slide">
-	  		<div class="slide-son">
+	  	<img src="assets/img/top-carousel/visuel_1.jpg">
+	  		<div class="slide-son slide-son-1">
 	  			<h1>Pour les Entreprises</h1>
 	  			<p>Nos solutions sur-mesure pour simplifier le quotidien de vos salariés-parents : Journées parentalité, stages vacances,…</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
-	  		<div class="slide-son">
+	  	<img src="assets/img/top-carousel/visuel_2.jpg">
+	  		<div class="slide-son slide-son-2">
 	  			<h1>Pour les Centres Commerciaux</h1>
 	  			<p>Nos espaces enfants pour permettre à vos clients de shopper librement : animations permanentes ou évènementielles.</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
-	  		<div class="slide-son">
+	  	<img src="assets/img/top-carousel/visuel_3.jpg">
+	  		<div class="slide-son slide-son-3">
 	  			<h1>Pour les Collectivités</h1>
 	  			<p>Nos solutions d’accompagnement pour la gestion de vos activités péri et extrascolaires : recrutement, audit, coordination pédagogique,…</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
-	  		<div class="slide-son">
+	  	<img src="assets/img/top-carousel/visuel_4.jpg">
+	  		<div class="slide-son slide-son-4">
 	  			<h1>Pour les Écoles</h1>
 	  			<p>Nos ateliers ludo-éducatifs pour compléter votre offre périscolaire : Théâtre, Autour de l’alimentation, Les petits scientifiques,…</p>
 	  		</div>
 	  	</div>
 	  	<div class="slide">
-	  		<div class="slide-son">
+	  	<img src="assets/img/top-carousel/visuel_5.jpg">
+	  		<div class="slide-son slide-son-5">
 	  			<h1>Pour les Parents</h1>
 	  			<p>Nos activités d’éveil et de loisirs pour vos enfants de 0 à 12 ans : Anniversaires, stages vacances, ateliers hebdomadaires (Initiation à l’anglais, au cirque, …</p>
 	  		</div>
