top page front progression

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -57,7 +57,9 @@
 	  </div>
 	  <div class="top-info">
 	  	<div class="top-info-static">
-	  		<h1>Kids attitude, spécialiste des activités ludo-éducatives pour les enfants de 4 à 12 ans</h1>
+	  		<h1>Kids attitude, spécialiste des activités</h1>
+	  		<h1>ludo-éducatives pour les enfants de 4 à 12 ans</h1>
+	  		<img src="assets/img/trait_titre_1.png">
 	  		<p>Kids Attitude est l'un des premiers gestionnaires d'espaces de loisirs pour les entreprises et centres commerciaux. Nous développons également des services d'accompagnement des collectivités et écoles dans leurs activités péri et extrascolaires.</p>
 	  	</div>
 	  	<div class="top-info-carousel">
