--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -15,7 +15,7 @@
 	  		<li class="main-menu"><a href="#about">Qui sommes-nous ?</a></li>
 	  		<li class="main-menu"><a href="#offers">Nos offres</a></li>
 	  		<li class="main-menu"><a href="#contact">Contact</a></li>
-	  		<li class="red-square"><a href="#contact">Réserver une activité</a></li>
+	  		<li class="red-square"><a href="#activity">Réserver une activité</a></li>
 	  	</ul>
 	  </div>
 	  <div class="carousel-top">
@@ -56,7 +56,7 @@
 	  	</div>
 	  </div>
 	  <div class="top-info">
-	  	<div class="top-info-static">
+	  	<div id="about" class="top-info-static">
 	  		<h1>Kids attitude, spécialiste des activités</h1>
 	  		<h1>ludo-éducatives pour les enfants de 4 à 12 ans</h1>
 	  		<img src="assets/img/trait_titre_1.png">
@@ -64,7 +64,7 @@
 	  	</div>
 	  	<div class="top-info-carousel">
 	  		<div class="top-info-slide">
-	  			<img src="">
+	  			<img src="assets/img/middle-carousel/visuel_nos_metiers.jpg">
 	  			<ul>
 	  				<li></li>
 	  				<li></li>
@@ -72,7 +72,16 @@
 	  			</ul>
 	  		</div>
 	  		<div class="top-info-slide">
-	  			<img src="">
+	  			<img src="assets/img/middle-carousel/visuel_notre_peda.jpg">
+	  			<ul>
+	  				<li><h1>Notre mission éducative :</h1>
+	  				<p>Préparer chaque enfant à devenir un citoyen du Monde à travers deux notions fondamentales, l’Eveil à la citoyenneté (respect de soi et de l’autre, apprentissage de la collectivité, …) et l’ouverture sur le Monde (Eveil des sens, découverte de la diversité, …)</p></li>
+	  				<li><h1>Nos valeurs éducatives:</h1><p>Bienveillance, plaisir, confiance et ouverture.</p></li>
+	  				<li><h1>Notre devise:</h1><p>S’amuser, S’éveiller, Bien grandir</p></li>
+	  			</ul>
+	  		</div>
+	  		<div class="top-info-slide">
+	  			<img src="assets/img/middle-carousel/visuel_nos-equipes.jpg">
 	  			<ul>
 	  				<li></li>
 	  				<li></li>
@@ -80,7 +89,7 @@
 	  			</ul>
 	  		</div>
 	  		<div class="top-info-slide">
-	  			<img src="">
+	  			<img src="assets/img/middle-carousel/visuel_nos_espaces.jpg">
 	  			<ul>
 	  				<li></li>
 	  				<li></li>
@@ -88,15 +97,7 @@
 	  			</ul>
 	  		</div>
 	  		<div class="top-info-slide">
-	  			<img src="">
-	  			<ul>
-	  				<li></li>
-	  				<li></li>
-	  				<li></li>
-	  			</ul>
-	  		</div>
-	  		<div class="top-info-slide">
-	  			<img src="">
+	  			<img src="assets/img/middle-carousel/logo_sodexo.png">
 	  			<ul>
 	  				<li></li>
 	  				<li></li>
@@ -105,7 +106,7 @@
 	  		</div>
 	  	</div>
 	  </div>
-	  <div class="middle-info">
+	  <div id="offers" class="middle-info">
 	  <h1>Kids Attitude, vos solutions clé en main</h1>
 	  <p>Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
 	  	<div class="middle-info-carousel">
@@ -165,8 +166,12 @@
 	  			<img src="">
 	  		</div>
 	  	</div>
+	  	<div id="activity">
+	  		<div>Contactez-nous</div>
+	  		<div>Réserver une activité</div>
+	  	</div>
 	  </div>
-	  <div class="bottom-contact">
+	  <div id="contact" class="bottom-contact">
 	  	<div class="bottom-contact-left">
 	  		<h1>Contactez-nous</h1>
 	  		<p>Nos solutions sont conçues sur-mesure pour chacun de nos clients.</p>
