--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -88,11 +88,11 @@ body {
 	display: block;
 }
 
-.slick-slide {
+.carousel-top .slick-slide {
 	min-height: 513px;
 }
 
- .slick-dots {
+.carousel-top .slick-dots {
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -101,7 +101,7 @@ body {
     left: 538px;
 }
 
-.slick-dots li button {
+.carousel-top .slick-dots li button {
 	background-color: transparent;
 	background-image: url("../img/top-carousel/empty.png");
 	background-repeat: no-repeat;
@@ -112,7 +112,7 @@ body {
     margin: 2px;
 }
 
-.slick-dots .slick-active button {
+.carousel-top .slick-dots .slick-active button {
 	background-image: url("../img/top-carousel/full.png");
 	background-repeat: no-repeat;
 	border: 0,0,0,0;
@@ -234,14 +234,80 @@ body {
 .top-info-carousel {
 	width: 860px;
 	height: 390px;
-	background-color: grey;
+	background-color: rgb(227,233,225);
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.top-info-slide {
+.top-info-carousel .slick-dots {
+	display: flex;
+	list-style: none;
+	width: 860px;
+	margin: 0;
+	padding: 0;
+	top: 0;
+	position: absolute;
+}
+
+/*.top-info-carousel .slick-dots button {
 	visibility: hidden;
-	/*!!!!!!! A ABSOLUMENT MODIFIER QUAND JE FERAI CE SLIDER !!!!!! */
+}*/
+
+.top-info-carousel .slick-dots button/*:after*/ {
+	/*visibility: visible;*/
+	width: 172px;
+	padding: 0;
+	margin: 0;
+}
+
+.top-info-carousel .slick-dots #slick-slide10 button {
+	visibility: hidden;
+}
+
+.top-info-carousel .slick-dots #slick-slide10 button:after {
+	visibility: visible;
+	content: 'Nos métiers';
+}
+
+.top-info-carousel .slick-dots #slick-slide11 button {
+	visibility: hidden;
+}
+
+.top-info-carousel .slick-dots #slick-slide11 button:after {
+	visibility: visible;
+	content: 'Notre pédagogie';
+}
+
+.top-info-carousel .slick-dots #slick-slide12 button {
+	visibility: hidden;
+}
+
+.top-info-carousel .slick-dots #slick-slide12 button:after {
+	visibility: visible;
+	content: 'Nos équipes';
+}
+
+.top-info-carousel .slick-dots #slick-slide13 button {
+	visibility: hidden;
+}
+
+.top-info-carousel .slick-dots #slick-slide13 button:after {
+	visibility: visible;
+	content: 'Nos espaces';
+}
+
+.top-info-carousel .slick-dots #slick-slide14 button {
+	visibility: hidden;
+	content: 'Groupe Sodexo';
+}
+
+.top-info-carousel .slick-dots #slick-slide14 button:after {
+	visibility: visible;
+	content: 'Groupe Sodexo';
+}
+
+.top-info-slide {
+	
 }
 
 .middle-info {
@@ -257,8 +323,7 @@ body {
 }
 
 .middle-info-slide {
-	visibility: hidden;
-	/*!!!!!!! A ABSOLUMENT MODIFIER QUAND JE FERAI CE SLIDER !!!!!! */
+	
 }
 
 .bottom-contact {
