--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -62,64 +62,95 @@
 	  		<img src="assets/img/trait_titre_1.png">
 	  		<p>Kids Attitude est l'un des premiers gestionnaires d'espaces de loisirs pour les entreprises et centres commerciaux. Nous développons également des services d'accompagnement des collectivités et écoles dans leurs activités péri et extrascolaires.</p>
 	  	</div>
-	  	<div class="top-info-carousel">
-	  		<div class="top-info-slide">
-	  			<img src="assets/img/middle-carousel/visuel_nos_metiers.jpg">
-	  			<ul>
-	  				<li></li>
-	  				<li></li>
-	  				<li></li>
-	  			</ul>
+	  	<div class="top-carousel-container">
+	  		<img src="">
+	  		<div class="top-info-carousel">
+	  			<div class="top-info-slide">
+	  				<img src="assets/img/middle-carousel/visuel_nos_metiers.jpg">
+	  				<ul class="custom-list">
+	  					<li>Création et gestion d’espaces de loisirs durables ou éphémères</li>
+	  					<li>Accompagnement des acteurs publics et privés dans leurs activités péri et extrascolaires</li>
+	  					<li>Soutien à la parentalité : stages vacances, Familydays,…</li>
+	  				</ul>
+	  			</div>
+	  			<div class="top-info-slide">
+	  				<img src="assets/img/middle-carousel/visuel_notre_peda.jpg">
+	  				<ul class="custom-list">
+	  					<li><h1>Notre mission éducative :</h1>
+	  					<p>Préparer chaque enfant à devenir un citoyen du Monde à travers deux notions fondamentales, l’Eveil à la citoyenneté (respect de soi et de l’autre, apprentissage de la collectivité, …) et l’ouverture sur le Monde (Eveil des sens, découverte de la diversité, …)</p></li>
+	  					<li><h1>Nos valeurs éducatives :</h1><p>Bienveillance, plaisir, confiance et ouverture.</p></li>
+	  					<li><h1>Notre devise :</h1><p>S’amuser, S’éveiller, Bien grandir</p></li>
+	  				</ul>
+	  			</div>
+	  			<div class="top-info-slide">
+	  				<img src="assets/img/middle-carousel/visuel_nos_equipes.jpg">
+	  				<ul class="custom-list">
+	  					<li>Des professionnels de l’Animation formés à notre pédagogie.</li>
+	  				<li>Des taux d’encadrement supérieurs à la réglementation en vigueur.</li>
+	  				<li>De nombreux intervenants spécialisés pour nos activités spécifiques (Psychomotriciennes, professeurs, conférenciers, …)</li>
+	  				</ul>
+	  			</div>
+	  			<div class="top-info-slide">
+	  				<img src="assets/img/middle-carousel/visuel_nos_espaces.jpg">
+	  				<ul class="custom-list">
+	  					<li>Des espaces permanents ou éphémères conçus sur-mesure pour nos clients, répondant à la réglementation en vigueur</li>
+	  					<li>Un environnement chaleureux et sécurisé, adapté aux besoins des enfants</li>
+	  					<li>Des outils de gestion spécifiques pour garantir un accueil en toute sécurité</li>
+	  				</ul>
+	  			</div>
+	  			<div class="top-info-slide">
+	  				<img src="assets/img/middle-carousel/logo_sodexo.png">
+	  				<ul class="custom-list">
+	  					<li><h1>Services sur site :</h1>
+	  					<p>(Restauration, accueil, propreté, espace verts, maintenance, ...)</p></li>
+	  					<li><h1>Services avantages et récompenses :</h1><p>Solution Rh, programmes d’Incentive, activités sociales et culturelles, aides publiques</p></li>
+	  					<li><h1>Services aux particuliers et à domicile :</h1><p>Conciergerie d’entreprise, crèches et espaces de loisirs, aide à domicile</p></li>
+	  				</ul>
+	  			</div>
 	  		</div>
-	  		<div class="top-info-slide">
-	  			<img src="assets/img/middle-carousel/visuel_notre_peda.jpg">
-	  			<ul>
-	  				<li><h1>Notre mission éducative :</h1>
-	  				<p>Préparer chaque enfant à devenir un citoyen du Monde à travers deux notions fondamentales, l’Eveil à la citoyenneté (respect de soi et de l’autre, apprentissage de la collectivité, …) et l’ouverture sur le Monde (Eveil des sens, découverte de la diversité, …)</p></li>
-	  				<li><h1>Nos valeurs éducatives:</h1><p>Bienveillance, plaisir, confiance et ouverture.</p></li>
-	  				<li><h1>Notre devise:</h1><p>S’amuser, S’éveiller, Bien grandir</p></li>
-	  			</ul>
-	  		</div>
-	  		<div class="top-info-slide">
-	  			<img src="assets/img/middle-carousel/visuel_nos-equipes.jpg">
-	  			<ul>
-	  				<li></li>
-	  				<li></li>
-	  				<li></li>
-	  			</ul>
-	  		</div>
-	  		<div class="top-info-slide">
-	  			<img src="assets/img/middle-carousel/visuel_nos_espaces.jpg">
-	  			<ul>
-	  				<li></li>
-	  				<li></li>
-	  				<li></li>
-	  			</ul>
-	  		</div>
-	  		<div class="top-info-slide">
-	  			<img src="assets/img/middle-carousel/logo_sodexo.png">
-	  			<ul>
-	  				<li></li>
-	  				<li></li>
-	  				<li></li>
-	  			</ul>
-	  		</div>
+	  		<img src="">
 	  	</div>
 	  </div>
 	  <div id="offers" class="middle-info">
-	  <h1>Kids Attitude, vos solutions clé en main</h1>
-	  <p>Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
+	  <div class="middle-info-upper">
+	  	<h1>Kids Attitude, vos solutions clé en main</h1>
+	  	<img src="/assets/img/trait_titre_1.png">
+	  	<p class="middle-info-p">Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
+	  </div>
 	  	<div class="middle-info-carousel">
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
-	  				<h1></h1>
-	  				<p></p>
+	  				<h1>Notre offre entreprises</h1>
+	  				<p>Vous souhaitez améliorer la qualité de vie de vos collaborateurs-parents, découvrez nos services dédiés aux entreprises.</p>
 	  				<ul>
-	  					<li></li>
-	  					<li></li>
+	  					<li>Stages vacances</li>
+	  					<li>Journées de la parentalité (family days)</li>
+	  					<li>Évènements spéciaux (arbre de noël, garde d'urgence,...)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="">
+	  			<img src="/assets/img/bottom-carousel/visuel_les_entreprises.jpg">
+	  		</div>
+	  		<div class="middle-info-slide">
+	  			<div class="middle-info-left">
+	  				<h1>Nos offres Centres Commerciaux</h1>
+	  				<p>Vous souhaitez fidéliser votre clientèle Familles et améliorer votre attractivité, découvrez nos services dédiés aux centres commerciaux.</p>
+	  				<ul>
+	  					<li>Espaces enfants</li>
+	  					<li>Animations enfants lors d'évènements spéciaux</li>
+	  				</ul>
+	  			</div>
+	  			<img src="/assets/img/bottom-carousel/visuel_centre_commerciaux.jpg">
+	  		</div>
+	  		<div class="middle-info-slide">
+	  			<div class="middle-info-left">
+	  				<h1>Notre offre Collectivités</h1>
+	  				<p>Vous souhaitez optimiser la gestion de vos structures et bénéficier de notre expertise métier, découvrez nos services dédiés aux collectivités.</p>
+	  				<ul>
+	  					<li>Accueils de loisirs péri et extrascolaires,</li>
+	  					<li>Conseils en gestion (audit, recrutement, coordination pédagogique, …)</li>
+	  				</ul>
+	  			</div>
+	  			<img src="/assets/img/bottom-carousel/visuel_">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
@@ -130,7 +161,7 @@
 	  					<li></li>
 	  				</ul>
 	  			</div>
-	  			<img src="">
+	  			<img src="/assets/img/bottom-carousel/visuel_">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
@@ -141,29 +172,7 @@
 	  					<li></li>
 	  				</ul>
 	  			</div>
-	  			<img src="">
-	  		</div>
-	  		<div class="middle-info-slide">
-	  			<div class="middle-info-left">
-	  				<h1></h1>
-	  				<p></p>
-	  				<ul>
-	  					<li></li>
-	  					<li></li>
-	  				</ul>
-	  			</div>
-	  			<img src="">
-	  		</div>
-	  		<div class="middle-info-slide">
-	  			<div class="middle-info-left">
-	  				<h1></h1>
-	  				<p></p>
-	  				<ul>
-	  					<li></li>
-	  					<li></li>
-	  				</ul>
-	  			</div>
-	  			<img src="">
+	  			<img src="/assets/img/bottom-carousel/visuel_">
 	  		</div>
 	  	</div>
 	  	<div id="activity">
