third carousel text style

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -120,7 +120,7 @@
 	  	<div class="middle-info-carousel">
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
-	  				<h1>Notre offre entreprises</h1>
+	  				<h1>Notre offre Entreprises</h1>
 	  				<p>Vous souhaitez améliorer la qualité de vie de vos collaborateurs-parents, découvrez nos services dédiés aux entreprises.</p>
 	  				<ul>
 	  					<li>Stages vacances</li>
@@ -150,29 +150,29 @@
 	  					<li>Conseils en gestion (audit, recrutement, coordination pédagogique, …)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_">
+	  			<img src="/assets/img/bottom-carousel/visuel_collectivites.jpg">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
-	  				<h1></h1>
-	  				<p></p>
+	  				<h1>Notre offre Écoles</h1>
+	  				<p>Vous souhaitez enrichir votre offre pédagogique pendant les temps périscolaires, découvrez nos services dédiés aux écoles »</p>
 	  				<ul>
-	  					<li></li>
-	  					<li></li>
+	  					<li>Ateliers ludo-éducatifs (théâtre, Autour de l’alimentation, Les petits scientifiques,…)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_">
+	  			<img src="/assets/img/bottom-carousel/visuel_ecoles.jpg">
 	  		</div>
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
-	  				<h1></h1>
-	  				<p></p>
+	  				<h1>Notre offre Parents</h1>
+	  				<p>Vous souhaitez proposer à vos enfants des activités d’éveil et de loisirs originales, découvrez nos services dédiés aux parents.</p>
 	  				<ul>
-	  					<li></li>
-	  					<li></li>
+	  					<li>Anniversaires</li>
+	  					<li>Stages vacances</li>
+	  					<li>Ateliers hebdomadaires (initiation à l’anglais, au cirque, …)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_">
+	  			<img src="/assets/img/bottom-carousel/visuel_parents.jpg">
 	  		</div>
 	  	</div>
 	  	<div id="activity">
